Use mysql connection in production

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  host: <%= ENV["BINARY_DB_INSTANCE"] %>
+  port: 3306
+  database: <%= ENV["BINARY_DB_NAME"] %>
+  username: <%= ENV["BINARY_DB_USERNAME"] %>
+  password: <%= ENV["BINARY_DB_PASSWORD"] %>
+  pool: 5
